2006-05-12  Aaron Stone  <aaron@serendipity.cx>

	* sievecmd.h, sievecmd.h:
	Various improvements and updates to bring dbmail-sievecmd in line with
	the other command line tools. Inserting a script from a file now
	works (closes bug #346).
	* check_dbmail_imapd.c:
	Added testcase for dbmail_imap_session_prompt and functions to create
	a temporary fifo to simulate a network connection.

2006-05-10  Paul J Stevens <paul@nfg.nl>

	* debug.c:
	cut down the number of strlen calls
	* THANKS:
	thank metaways for helping out on solaris
	* dm_imaputil.c, test-scripts/testimap.py:
	fix string quoting and encoding in message-id and content-disposition
	atoms

2006-05-09  Paul J Stevens <paul@nfg.nl>

	* debug.c:
	replace vsyslog with g_strdup_vprintf to placate solaris
	* dbmail-imapsession.c:
	avoid passing null pointer to trace call
	* dm_imaputil.c:
	properly descend into message/rfc822 message part during bodystructure
	construction
	* debian/dbmail.init, debian/default.dbmail:
	include sieve in debian startup scripts
	* check_dbmail_imapd.c, check_dbmail_message.c, dm_imaputil.c:
	detect illegal message-ids during envelope construction

2006-05-06  Aaron Stone  <aaron@seerendipity.cx>

	* dbmail.conf:
	Added comment for anonymous ldap bindings.
	* misc.h, misc.c, dm_imaputil.h, dm_imaputil.c,
	md5.h, md5.c, dbmd5.h, dbmd5.c:
	Removed all MD5 and Base64 encoding and decoding code.
	* dm_md5.h, dm_md5.c:
	One stop shop for MD5. Uses same code as before, but now it's static.
	* dm_base64.h, dm_base64.c:
	One stop shop for Base64. Uses a faster public domain algorithm.
	* user.c, dbmail-user.c, modules/authsql.c:
	Added support for MD5-Base64 passwords.
	* modules/sortsieve.c, dbmail-imapsession.c, timsieve.c:
	Use new MD5 and Base64 functions with far fewer casts.
	* check_dbmail_auth.c:
	Test suite for all password encryption types.

2006-05-05  Paul J Stevens <paul@nfg.nl>

	* sql/mysql/update_headervalue_01.mysql:
	remove redundant index from update script